[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/main_menus/MainMenuParallaxBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Fonts/Kenney Mini.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Buttons/lineLight/lineLight33.png" type="Texture" id=8]
[ext_resource path="res://assets/Buttons/flatDark/flatDark34.png" type="Texture" id=9]
[ext_resource path="res://assets/Buttons/flatLight/flatLight33.png" type="Texture" id=10]
[ext_resource path="res://assets/Fonts/Kenney High.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scripts/main_menus/MainMenuInterface.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 54
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxLine" id=5]
color = Color( 1, 1, 1, 1 )
thickness = 8

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 1, 1, 1 )
thickness = 4

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )
thickness = 8

[node name="MainMenuInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="MainMenuParallaxBackground" parent="." instance=ExtResource( 1 )]

[node name="TitleLbl" type="Label" parent="."]
margin_left = 64.0
margin_top = 576.0
margin_right = 448.0
margin_bottom = 644.0
custom_fonts/font = SubResource( 1 )
text = "THE FOX RUN"
align = 1
valign = 1
autowrap = true

[node name="BtnsContainer" type="HBoxContainer" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ExitBtn" type="TextureButton" parent="BtnsContainer"]
margin_right = 64.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
expand = true

[node name="StartBtnContainer" type="VBoxContainer" parent="."]
margin_left = 896.0
margin_top = 576.0
margin_right = 1216.0
margin_bottom = 640.0

[node name="Start" type="Button" parent="StartBtnContainer"]
margin_right = 320.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "NEW GAME"
clip_text = true

[node name="TutorialBtnContainer" type="VBoxContainer" parent="."]
margin_left = 512.0
margin_top = 576.0
margin_right = 832.0
margin_bottom = 640.0

[node name="Tutorial" type="Button" parent="TutorialBtnContainer"]
margin_right = 320.0
margin_bottom = 64.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "TUTORIAL"
clip_text = true

[connection signal="pressed" from="BtnsContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="StartBtnContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="TutorialBtnContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
